--- a/kCore/.classpath
+++ b/kCore/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="C:/Dev/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/ProtocolLib.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/spigot-1.7.10-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/WorldGuard.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/WorldEdit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
