--- a/kCore/.classpath
+++ b/kCore/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Dev/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/ProtocolLib.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/spigot-1.7.10-R0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/WorldGuard.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/WorldEdit.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/spigot.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
