--- a/kCore/.settings/org.eclipse.core.resources.prefs
+++ b/kCore/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/me/kingingo/kcore/Enum/Text.java=UTF-8
 encoding//src/me/kingingo/kcore/Gilden/CommandGilde.java=UTF-8
+encoding//src/me/kingingo/kcore/Gilden/GildenManager.java=UTF-8
+encoding//src/me/kingingo/kcore/PlayerStats/StatsManager.java=UTF-8
 encoding//src/me/kingingo/kcore/friend/CommandFriend.java=UTF-8
