--- a/kCore/.classpath
+++ b/kCore/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="C:/Dev/WorldGuard.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/WorldEdit.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/spigot.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/PermissionsEx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
