--- a/kCore/.classpath
+++ b/kCore/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="C:/Dev/WorldEdit.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/spigot.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/PermissionsEx.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/Essentials.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
