--- a/kCore/.classpath
+++ b/kCore/.classpath
@@ -8,9 +8,9 @@
 	<classpathentry kind="lib" path="C:/Dev/PermissionsEx.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/kSkyBlock.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/Essentials.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Dev/javax.servlet-api-3.1.0.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/pscmerchant1.0.13.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/AAC.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
