--- a/kCore/.classpath
+++ b/kCore/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="lib" path="C:/Dev/Essentials.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/javax.servlet-api-3.1.0.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/pscmerchant1.0.13.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/se1_8"/>
 	<classpathentry kind="lib" path="C:/Dev/kArcade.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/spigot.jar"/>
 	<classpathentry kind="lib" path="C:/Dev/AAC.jar"/>
