--- a/kCore/.project
+++ b/kCore/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kCore_old</name>
+	<name>kCore</name>
 	<comment></comment>
 	<projects>
 	</projects>
