--- a/kCore/pom.xml
+++ b/kCore/pom.xml
@@ -1,10 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>kCore</groupId>
-	<artifactId>kCore</artifactId>
+	<groupId>eu.epicpvp</groupId>
+	<artifactId>core-core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	<packaging>jar</packaging>
+	
+	<parent>
+		<groupId>eu.epicpvp</groupId>
+		<artifactId>core-parent</artifactId>
+		<version>1.0</version>
+	</parent>
+	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
@@ -24,15 +31,9 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<!-- <plugin> <groupId>org.eclipse.m2e</groupId> <artifactId>lifecycle-mapping</artifactId> 
-				<version>1.0.0</version> <configuration> <lifecycleMappingMetadata> <pluginExecutions> 
-				<pluginExecution> <pluginExecutionFilter> <groupId>**</groupId> <artifactId>**</artifactId> 
-				<versionRange>[1.0.0,)</versionRange> <goals> <goal>compile</goal> <goal>build</goal> 
-				<goal>package</goal> </goals> </pluginExecutionFilter> <action> <ignore /> 
-				</action> </pluginExecution> </pluginExecutions> </lifecycleMappingMetadata> 
-				</configuration> </plugin> -->
 		</plugins>
 	</build>
+	
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
@@ -51,6 +52,11 @@
 		<dependency>
 			<groupId>kArcade</groupId>
 			<artifactId>kArcade</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency> 
+		<dependency>
+			<groupId>kSkyBlock</groupId>
+			<artifactId>kSkyBlock</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -99,11 +105,6 @@
 		<dependency>
 			<groupId>DatenClient</groupId>
 			<artifactId>DatenClient</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>kSkyBlock</groupId>
-			<artifactId>kSkyBlock</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
