--- a/kCore/pom.xml
+++ b/kCore/pom.xml
@@ -5,26 +5,27 @@
 	<artifactId>core-core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	
+
 	<distributionManagement>
-        <repository>
-            <id>epicpvp-releases</id>
-            <name>epicpvp-artifactory-releases</name>
-            <url>http://149.202.150.185:8081/artifactory/epicpvp-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>epicpvp-snapshots</id>
-            <name>epicpvp-artifactory-snapshots</name>
-            <url>http://149.202.150.185:8081/artifactory/epicpvp-snapshots/</url>
-        </snapshotRepository>
+		<repository>
+			<id>epicpvp-releases</id>
+			<name>epicpvp-artifactory-releases</name>
+			<url>http://149.202.150.185:8081/artifactory/epicpvp-releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>epicpvp-snapshots</id>
+			<name>epicpvp-artifactory-snapshots</name>
+			<url>http://149.202.150.185:8081/artifactory/epicpvp-snapshots/</url>
+		</snapshotRepository>
 	</distributionManagement>
-	
 	<parent>
 		<groupId>eu.epicpvp</groupId>
 		<artifactId>core-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
@@ -46,12 +47,12 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<repositories>
-	 	<repository>
-            <id>epicpvp-all</id>
-            <url>http://149.202.150.185:8081/artifactory/epicpvp-all/</url>
-        </repository>
+		<repository>
+			<id>epicpvp-all</id>
+			<url>http://149.202.150.185:8081/artifactory/epicpvp-all/</url>
+		</repository>
 		<repository>
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
@@ -67,13 +68,13 @@
 	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>kArcade</groupId>
-			<artifactId>kArcade</artifactId>
+			<groupId>eu.epicpvp</groupId>
+			<artifactId>core-karcarde</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency> 
+		</dependency>
 		<dependency>
-			<groupId>kSkyBlock</groupId>
-			<artifactId>kSkyBlock</artifactId>
+			<groupId>eu.epicpvp</groupId>
+			<artifactId>core-kSkyBlock</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -126,9 +127,14 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>DatenClient</groupId>
+			<groupId>dev.wolveringer</groupId>
 			<artifactId>DatenClient</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.vexsoftware</groupId>
+			<artifactId>votifier</artifactId>
+			<version>1.9</version>
 		</dependency>
 	</dependencies>
 </project>
