--- a/kCore/.settings/org.eclipse.core.resources.prefs
+++ b/kCore/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/eu/epicpvp/kcore/Enum/Zeichen.java=UTF-8
 encoding//src/eu/epicpvp/kcore/StatsManager/StatsManager.java=UTF-8
 encoding/<project>=UTF-8
+encoding/src=UTF-8
