--- a/kCore/pom.xml
+++ b/kCore/pom.xml
@@ -98,9 +98,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>us.myles.epicpvp</groupId>
-			<artifactId>viaversion</artifactId>
-			<version>0.7.7-SNAPSHOT</version>
+			<groupId>eu.epicpvp</groupId>
+			<artifactId>ViaVersion</artifactId>
+			<version>0.7.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
