--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
 			<id>sk89q-repo</id>
 			<url>http://maven.sk89q.com/repo/</url>
 		</repository>
+		<repository>
+			<id>dmulloy2-repo</id>
+			<url>http://repo.dmulloy2.net/content/groups/public/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -134,6 +138,7 @@
 			<groupId>eu.epicpvp</groupId>
 			<artifactId>ViaVersion</artifactId>
 			<version>0.9.2</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>eu.epicpvp</groupId>
@@ -160,11 +165,13 @@
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldedit</artifactId>
 			<version>6.0.0-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldguard</artifactId>
 			<version>6.1.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -176,6 +183,13 @@
 			<groupId>com.vexsoftware</groupId>
 			<artifactId>votifier</artifactId>
 			<version>1.9</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.comphenix.protocol</groupId>
+			<artifactId>ProtocolLib</artifactId>
+			<version>3.6.5</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
